Remove user group colours from modding usernames to fix readability

--- a/resources/assets/less/bem/beatmap-discussion-post.less
+++ b/resources/assets/less/bem/beatmap-discussion-post.less
@@ -359,21 +359,5 @@
     font-weight: bold;
     font-style: italic;
     max-width: 120px;
-
-    .@{_top}--admin & {
-      color: @beatmap-discussion--user-color-moderator;
-    }
-
-    .@{_top}--bng & {
-      color: @beatmap-discussion--user-color-moderator;
-    }
-
-    .@{_top}--owner & {
-      color: @beatmap-discussion--user-color-owner;
-    }
-
-    .@{_top}--nat & {
-      color: @beatmap-discussion--user-color-moderator;
-    }
   }
 }
